force-app/main/default/objects/Revenue__c/Revenue__c.object-meta.xml
<CustomObject>
    <label>Revenue</label>
    <nameField>
        <displayFormat>RV{0000}</displayFormat>
        <label>Revenue Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Revenues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>