force-app/main/default/objects/Revenue__c/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <formula>19/100*AmountNetto__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>