force-app/main/default/objects/Revenue__c/fields/VatDeduction__c.field-meta.xml
<CustomField>
    <fullName>VatDeduction__c</fullName>
    <label>VAT Deduction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>19</fullName>
                <default>true</default>
                <label>19%</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>7%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>