force-app/main/default/objects/Revenue__c/listViews/Current_Year.listView-meta.xml
<ListView>
    <fullName>Current_Year</fullName>
    <columns>NAME</columns>
    <columns>AmountNetto__c</columns>
    <columns>VAT__c</columns>
    <columns>DateIncurred__c</columns>
    <columns>MonthlyRepeatable__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DateIncurred__c</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>Current Year</label>
</ListView>